# Provider-Opencode-Adapter

./: .gitignore  _manifest.json  plugin.py  pyproject.toml
.github/workflows/: ci.yml
provider_fncall_util/: __init__.py
provider_fncall_util/protocols/: __init__.py
tests/: test_plugin.py
