[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "provider-opencode-adapter"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = ["echotools>=2.0.0", "provider-sdk>=0.3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["provider_fncall_util*"]
